--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,5 +80,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
             latest
-            ${{ DOCKER_TAG }}
+            ${{ secrets.DOCKER_TAG }}
           labels: ${{ steps.meta.outputs.labels }}
