--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,6 +23,7 @@ env:
 
   # Registry. Use docker.io for DockerHub
   REGISTRY: docker.io
+  PULSAR_VERSION: 2.8.0
 
 jobs:
   # Run tests.
@@ -39,7 +40,7 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file Dockerfile --build-arg PULSAR_VERSION=2.8.0
+            docker build . --file Dockerfile --build-arg PULSAR_VERSION=${{ env.PULSAR_VERSION }}
           fi
 
   # Push image to GitHub Packages.
@@ -75,10 +76,10 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          build-args: PULSAR_VERSION=2.8.0
+          build-args: PULSAR_VERSION=${{ env.PULSAR_VERSION }}
           # Don't push on pull requests
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            latest
-            ${{ secrets.DOCKER_TAG }}
+            ilaipi/node14-buster-pulsar:latest
+            ilaipi/node14-buster-pulsar:${{ secrets.DOCKER_TAG }}
           labels: ${{ steps.meta.outputs.labels }}
